2013-10-16  Junichi Satoh  <junichi@rworks.jp>

	* extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql,
	extras/pandoradb_migrate_4.1_to_5.0.mysql.sql,
	extras/pandoradb_migrate_4.1_to_5.0.oracle.sql,
	extras/pandoradb_migrate_4.1_to_5.0.postgreSQL.sql: Removed duplicated
	queries.

2013-10-15  Ramon Novoa  <rnovoa@artica.es>

	* godmode/agentes/module_manager_editor.php: Fixed the module macro
	  editor.

2013-10-15  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb_data.sql: Fixed some SQL queries.

2013-10-15  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb_data.sql: Added more network components.

2013-10-14 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/events/events.build_query.php,
	operation/events/events_list.php, operation/events/events.php: added
	the filter for events of group childrens of parent group selected.

2013-10-14  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php
	include/functions_reporting.php
	godmode/reporting/reporting_builder.item_editor.php: Fixed filters
	of event reports filters and some visual issues

2013-10-14 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_groups.php: into the function
	"groups_get_group_to_list" fixed PHP warnings about uninitialized
	vars.

2013-10-14 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/status_monitor.php: fixed the filter by group
	in the metaconsole.

2013-10-14  Ramon Novoa  <rnovoa@artica.es>

	* operation/snmpconsole/snmp_view.php: Made the SNMP trap viewer look
	  more like the event viewer.

2013-10-14 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/graphs/flot/pandora.flot.js,
	include/graphs/functions_flot.php, operation/agentes/stat_win.php:
	fixed the charts with negative values and a flot type.

2013-10-14  Vanessa Gil <vanessa.gil@artica.es>

	* include/languages/ar.mo
	  include/languages/ar.po
 	  include/languages/cs.mo
	  include/languages/cs.po
	  include/languages/de.mo
	  include/languages/de.po