@@ -393,7 +393,6 @@ ALTER TABLE tnetwork_map ADD (show_modulegroup NUMBER(10, 0) default 0 NOT NULL)
 -- Table tagente_estado
 ------------------------------------------------------------------------
 ALTER TABLE tagente_estado ADD (last_known_status  NUMBER(10, 0) default 0 NOT NULL);
-ALTER TABLE tagente_estado ADD (last_error  NUMBER(10, 0) default 0 NOT NULL);
 
 -- -----------------------------------------------------
 -- Table tevent_response
