@@ -1,3 +1,13 @@
+2013-10-16  Ramon Novoa  <rnovoa@artica.es>
+
+	* extras/pandoradb_migrate_4.1_to_5.0.postgreSQL.sql,
+	  extras/pandoradb_migrate_4.1_to_5.0.oracle.sql,
+	  extras/pandoradb_migrate_4.1_to_5.0.mysql.sql,
+	  extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,
+	  extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
+	  extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql: Removed some queries
+	  that were re-introduced in revision 8897.
+
 2013-10-16  Junichi Satoh  <junichi@rworks.jp>
 
 	* extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql,
